logs/cubes-search.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cubes_search'...
Compiling './lib/python3.5/site-packages/cubes_search/sphinx.py'...
***   File "./lib/python3.5/site-packages/cubes_search/sphinx.py", line 117
    print "SEARCH IN %s QUERY '%s' LOCALE:%s" % (str(dimension), query,
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cubes_search/sphinxapi.py'...
***   File "./lib/python3.5/site-packages/cubes_search/sphinxapi.py", line 90
    SPH_ATTR_MULTI			= 0X40000001L
                  			            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cubes_search/whoosh_engine.py'...
***   File "./lib/python3.5/site-packages/cubes_search/whoosh_engine.py", line 85
    print "indexing %s, locale: %s" % (dimension, locale)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cubes_search-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
